--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -501,7 +501,7 @@
               <!-- Modal for copy link prompt end -->
               <!-- Modal for waiting -->
               <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="waitingModalLabel"
-                aria-hidden="true">
+                data-bs-backdrop="static" aria-hidden="true">
                 <!-- note for modal: data-bs-backdrop="static" -->
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
