--- a/server/view/member/links.ejs
+++ b/server/view/member/links.ejs
@@ -23,11 +23,14 @@
         /* .you-shared-row:hover .revoke-btn {
           display: block;
         }
-
         .revoke-btn {
           display: none;
         } */
         
+        .revoke-btn:hover {
+          filter: drop-shadow(1px 1px 0.5px #919191);
+        }
+
         .custom-operation-btn:hover {
           background-color: #f8f5ef;
           box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
