--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -102,9 +102,9 @@
 
         .progress-bar {
           height: 100%;
-          background-color: #519cf6;
-          width: 50%;
-          transition: width 0.5s ease-in-out;
+          /* background-color: #519cf6;
+          width: 50%; */
+          transition: width 0.3s ease-in-out;
         }
 
         /* .email-container {
@@ -342,8 +342,8 @@
                             </div>
                           </form>
                           <div class="d-flex justify-content-end pt-3">
-                            <button type="button" class="btn btn-custom-yes" id="create-btn">Create</button>
-                            <button type="button" class="btn btn-custom-no" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-custom-yes ms-2" id="create-btn">Create</button>
+                            <button type="button" class="btn btn-custom-no ms-2" data-bs-dismiss="modal">Cancel</button>
                           </div>
                         </div>
                         <!-- <div class="modal-footer">
@@ -449,7 +449,7 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                      <div id="revoke-confirm-q">Are you sure to revoke the link?</div>
+                      <div id="revoke-confirm-q" class="text-wrap confirm-msg">Are you sure to revoke the link?</div>
                       <div class="d-flex justify-content-end pt-4">
                         <button type="button" class="btn btn-custom-yes ms-2" id="revoke-link-btn">
                           Yes
@@ -502,7 +502,6 @@
               <!-- Modal for waiting -->
               <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="waitingModalLabel"
                 data-bs-backdrop="static" aria-hidden="true">
-                <!-- note for modal: data-bs-backdrop="static" -->
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-body">
