--- a/server/view/member/trash.ejs
+++ b/server/view/member/trash.ejs
@@ -75,7 +75,7 @@
   <div id="root">
     <%- include('./partial/header') %>
       <!-- main block start -->
-      <div class="container content-block">
+      <div class="container content-block" style="padding-bottom: 16vh;">
         <div class="row">
           <!-- left  -->
           <%- include('./partial/left') %>
@@ -128,9 +128,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-body">
-                <div class="pt-3">
-                  <div id="confirm-restore-msg" class="text-wrap confirm-msg"></div>
-                </div>
+                <div id="confirm-restore-msg" class="text-wrap confirm-msg"></div>
                 <div class="d-flex justify-content-end pt-3">
                   <button type="button" class="btn btn-custom-yes ms-2" id="confirm-restore-btn">
                     Yes
