[feat] update line height of terms

--- a/server/view/member/terms.ejs
+++ b/server/view/member/terms.ejs
@@ -19,8 +19,8 @@
           margin: 1.5vh 0;
         }
 
-        .terms span,
-        .terms li {
+        #terms span,
+        #terms li {
           line-height: 2.5;
         }
 
