--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -400,7 +400,7 @@
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="getLinkModalLabel">Share with</h5>
+                      <h5 class="modal-title text-break pe-3" id="getLinkModalLabel">Share with</h5>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -410,8 +410,6 @@
                           <div class="email-container input-group">
                             <input type="email" autocomplete="off" class="form-control" id="recipient" disabled>
                             <button class="btn btn-link" type="button" id="add-email-btn" disabled>Add Email</button>
-                            <!-- <span class="add-email-instruction mt-1" style="display: none;">Input Email and Press
-                              Enter</span> -->
                           </div>
                           <div class="email-chips-container"></div>
                         </div>
@@ -426,7 +424,7 @@
                           <div class="form-check">
                             <input class="form-check-input" type="radio" value="user" name="access" id="access-user">
                             <label class="form-check-label" for="access-user">
-                              User
+                              Eondrive Users
                             </label>
                           </div>
                         </div>
@@ -434,7 +432,7 @@
                       </form>
                       <hr class="my-3">
                       <div>
-                        <div>People with access: </div>
+                        <div><b>People with access: </b></div>
                         <div id="current-access-list"></div>
                       </div>
                     </div>
