[feat] adjust UI

--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -432,7 +432,7 @@
                       </form>
                       <hr class="my-3">
                       <div>
-                        <div><b>People with access: </b></div>
+                        <div style="letter-spacing: 0.5px;"><b>People with access: </b></div>
                         <div id="current-access-list"></div>
                       </div>
                     </div>
