[chore] update about page / pending features in left sidebar

--- a/server/view/member/partial/left.ejs
+++ b/server/view/member/partial/left.ejs
@@ -4,6 +4,9 @@
     max-width: 100%;
     height: auto;
   }
+  /* .left-svg.left-svg-active {
+    fill: #3a50c0; 
+  } */
   /* .left-block {
     width: 6
   } */
