[chore] fix modal hide & download window popup order

--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -508,8 +508,7 @@
               </div>
               <!-- Modal for copy link prompt end -->
               <!-- Modal for waiting -->
-              <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="waitingModalLabel"
-                data-bs-backdrop="static" aria-hidden="true">
+              <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-body">
