--- a/server/view/member/history.ejs
+++ b/server/view/member/history.ejs
@@ -166,8 +166,7 @@
         </div>
         <!-- Modal for reminder end  -->
         <!-- Modal for waiting -->
-        <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="waitingModalLabel"
-          data-bs-backdrop="static" aria-hidden="true">
+        <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
           <!-- note for modal: data-bs-backdrop="static" -->
           <div class="modal-dialog" role="document">
             <div class="modal-content">
