--- a/server/view/member/view_file.ejs
+++ b/server/view/member/view_file.ejs
@@ -82,7 +82,7 @@
           </div>
         </div>
         <!-- Modal for waiting -->
-        <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-body">
