--- a/server/view/member/partial/stylesheet.ejs
+++ b/server/view/member/partial/stylesheet.ejs
@@ -1,4 +1,5 @@
 <link href="/img/favicon.ico" rel="shortcut icon"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-material-ui@5.0.15/material-ui.min.css">
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
   integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
 <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css" >
