[chore] adjust waiting modal

--- a/server/view/visitor/view_folder.ejs
+++ b/server/view/visitor/view_folder.ejs
@@ -96,8 +96,9 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-body">
-                <div>
-                  <h5 id="waiting-status" class="pb-3"></h5>
+                <div class="d-flex justify-content-between">
+                  <div><h5 id="waiting-status" class="pb-3"></h5></div>
+                  <button type="button" id="waiting-close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="text-center pb-3">
                   <div id="waiting-spinner" class="spinner-border text-secondary" role="status">
