--- a/server/view/member/about.ejs
+++ b/server/view/member/about.ejs
@@ -103,8 +103,9 @@
               <strong>System Architecture Diagram</strong>
             </div>
 
-            <div class="d-flex justify-content-center mt-4" style="width: 100%;">
-              <div>
+            <div id="architecture" class="d-flex justify-content-center mt-4" 
+                  style="width: 100%; background-color: white;">
+              <div class="py-2">
                 <svg
                   style="left: 0px; top: 0px; width: 100%; height: 100%; display: block; min-width: 855px; min-height: 545px; background-image: none; background-color: transparent;">
                   <defs>
@@ -570,6 +571,11 @@
   </div>
   <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="/js/pages/member/header.js"></script>
+  <script>
+    $("#architecture").on("click", function(e) {
+      e.currentTarget?.requestFullscreen();
+    })
+  </script>
 </body>
 
 </html>
