[chore] update about page

--- a/server/view/member/about.ejs
+++ b/server/view/member/about.ejs
@@ -91,7 +91,8 @@
                 <li>Backend server built with Node.js Express</li>
                 <li>Frontend created with HTML, CSS, Javascript, jQuery, Bootstrap</li>
                 <li>Session-Cookie Authentication</li>
-                <li>Realtime update by socket.io</li>
+                <li>Realtime update by Socket.IO</li>
+                <li>Redis adapter for Socket.IO servers scaling</li>
                 <li>MySQL for saving metadata</li>
                 <li>AWS S3 for file storage</li>
                 <li>AWS Lambda for file archiving</li>
