[refactor] refactor & rename

--- a/server/view/member/terms.ejs
+++ b/server/view/member/terms.ejs
@@ -69,7 +69,7 @@
                   integrity of user data, we cannot guarantee that the uploaded files will be permanently stored and
                   available. We are not liable for any data loss or damage to user content, including but not limited to
                   corruption, deletion, or unauthorized access. By using our service, you acknowledge and agree that you
-                  upload your content at your own risk and you are solely responsible for any loss or damage that may
+                  upload your content at your own risk, and you are solely responsible for any loss or damage that may
                   result. </li>
                 <li><b>Violation of Terms:</b> We reserve the right to terminate or suspend any user account or access
                   to
