[refactor] rename variables

--- a/server/view/member/about.ejs
+++ b/server/view/member/about.ejs
@@ -104,8 +104,8 @@
               <strong>System Architecture Diagram</strong>
             </div>
 
-            <div id="architecture" class="d-flex justify-content-center mt-4" 
-                  style="width: 100%; background-color: white;">
+            <div id="architecture" class="d-flex justify-content-center mt-4"
+              style="width: 100%; background-color: white;">
               <div class="py-2">
                 <svg
                   style="left: 0px; top: 0px; width: 100%; height: 100%; display: block; min-width: 855px; min-height: 545px; background-image: none; background-color: transparent;">
@@ -573,7 +573,8 @@
   <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="/js/pages/member/header.js"></script>
   <script>
-    $("#architecture").on("click", function(e) {
+    $("#architecture").on("click", function (e)
+    {
       e.currentTarget?.requestFullscreen();
     })
   </script>
