--- a/server/view/visitor/about.ejs
+++ b/server/view/visitor/about.ejs
@@ -24,8 +24,8 @@
           margin: 1.5vh 0;
         }
 
-        span,
-        li {
+        .description-text span,
+        .description-text li {
           line-height: 2.5;
         }
 
@@ -104,8 +104,9 @@
               <strong>System Architecture Diagram</strong>
             </div>
 
-            <div class="d-flex justify-content-center mt-4" style="width: 100%;">
-              <div>
+            <div id="architecture" class="d-flex justify-content-center mt-4"
+              style="width: 100%; background-color: white;">
+              <div class="py-2">
                 <svg
                   style="left: 0px; top: 0px; width: 100%; height: 100%; display: block; min-width: 855px; min-height: 545px; background-image: none; background-color: transparent;">
                   <defs>
@@ -569,6 +570,12 @@
       </div>
       <%- include('./partial/footer') %>
   </div>
+  <script>
+    $("#architecture").on("click", function (e)
+    {
+      e.currentTarget?.requestFullscreen();
+    })
+  </script>
 </body>
 
 </html>
