--- a/server/view/visitor/view_folder.ejs
+++ b/server/view/visitor/view_folder.ejs
@@ -10,7 +10,8 @@
 
       <!-- css internal -->
       <style>
-        .ff-row:hover .individual-dl-btn {
+        /* .ff-row:hover .individual-dl-btn { */
+        .files-row:hover .individual-dl-btn {
           display: block;
         }
 
