--- a/server/view/visitor/view_folder.ejs
+++ b/server/view/visitor/view_folder.ejs
@@ -10,7 +10,10 @@
 
       <!-- css internal -->
       <style>
-        /* .ff-row:hover .individual-dl-btn { */
+        td {
+          vertical-align: middle;
+        }
+
         .files-row:hover .individual-dl-btn {
           display: block;
         }
