[feat] add rate limiter for sign up related routes / update about page

--- a/server/view/member/about.ejs
+++ b/server/view/member/about.ejs
@@ -97,8 +97,10 @@
                 <li>AWS S3 for file storage</li>
                 <li>AWS Lambda for file archiving</li>
                 <li>AWS EC2 hosting with Application Load Balancer for scalability</li>
+                <li>Email confirmation by MailerSend*</li>
                 <li>SSL certification to enable HTTPS</li>
               </ul>
+              <p>*Registeration is not applicable when my send mail quota of MailerSend runs out</p>
             </div>
             <div class="about-items">
               <strong>System Architecture Diagram</strong>
