[refactor] refactor based on WebStorm inspection

--- a/server/view/visitor/index.ejs
+++ b/server/view/visitor/index.ejs
@@ -40,7 +40,7 @@
     }
 
     #title {
-      font-weight: xx-large;
+      font-weight: 600;
       font-size: 7vw;
     }
 
@@ -124,6 +124,7 @@
         </div>
       </div>
     </div>
+  </div>
 </body>
 
 </html>
