--- a/server/view/member/history.ejs
+++ b/server/view/member/history.ejs
@@ -59,7 +59,7 @@
           overflow-y: auto;
           word-wrap: break-word;
           padding: 10px;
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
 
         .btn-custom-yes {
