--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -182,7 +182,7 @@
           overflow-y: auto;
           word-wrap: break-word;
           padding: 10px;
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
 
         .custom-operation-btn {
