[chore] add test account into login input boxes

--- a/server/views/visitor/login.ejs
+++ b/server/views/visitor/login.ejs
@@ -171,13 +171,13 @@
                   <div class="mb-3">
                     <label for="email" class="form-label">Email<span class="text-danger">*</span></label>
                     <input type="email" class="form-control" name="email" id="email" required placeholder="Enter Email"
-                      pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$" autocomplete="off">
+                      pattern="^[\-\w\.]+@([\-\w]+\.)+[\-\w]{2,4}$" autocomplete="off" value="test@gmail.com">
                   </div>
 
                   <div class="mb-3">
                     <label for="password" class="form-label">Password<span class="text-danger">*</span></label>
                     <input type="password" class="form-control" name="password" id="password" required
-                      placeholder="Enter Password">
+                      placeholder="Enter Password" value="123oooOOO!">
                   </div>
 
                   <!-- <div class="mb-3 form-check d-flex justify-content-between">
